--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        tools:text="It Chapter Two" />
+        tools:text="It Chapter Two"
+        android:transitionName="tvTitleTransition"
+        />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -31,5 +33,6 @@
         android:id="@+id/tvoverview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:transitionName="tvOverViewTransition"
         tools:text="27 years after overcoming the malevolent supernatural entity Pennywise, the former members of the Losers' Club, who have grown up and moved away from Derry, are brought back together by a devastating phone call" />
 </LinearLayout>
