--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -40,7 +40,10 @@
                     android:layout_marginStart="5dp"
                     android:layout_toEndOf="@+id/ivPoster"
                     android:textSize="24sp"
-                    tools:text="Fast Furious Presents: Hobbs Shaw" />
+                    android:transitionName="tvTitleTransition"
+                    tools:text="Fast Furious Presents: Hobbs Shaw"
+
+                    />
 
                 <TextView
                     android:id="@+id/tvOverview"
@@ -52,6 +55,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="5dp"
                     android:layout_toEndOf="@+id/ivPoster"
+                    android:transitionName="tvOverViewTransition"
                     tools:text="A spinoff of The Fate of the Furious, focusing on Johnson's US diplomatic Security Agent Luke Hobbs forming an unlikely alliance with Statham's Deckard Shaw" />
             </LinearLayout>
         </LinearLayout>
